@@ -103,5 +103,29 @@
       <li>Number Three</li>
     </ol>
 
+    <h1 class="h1">H1 One</h1>
+    <h1 class="h1">H1 Two</h1>
+    <h1 class="h1">H1 Three</h1>
+
+    <h2 class="h2">H2 One</h2>
+    <h2 class="h2">H2 Two</h2>
+    <h2 class="h2">H2 Three</h2>
+
+    <h3 class="h3">H3 One</h3>
+    <h3 class="h3">H3 Two</h3>
+    <h3 class="h3">H3 Three</h3>
+
+    <h4 class="h4">H4 One</h4>
+    <h4 class="h4">H4 Two</h4>
+    <h4 class="h4">H4 Three</h4>
+
+    <h5 class="h5">H5 One</h5>
+    <h5 class="h5">H5 Two</h5>
+    <h5 class="h5">H5 Three</h5>
+
+    <h6 class="h6">H6 One</h6>
+    <h6 class="h6">H6 Two</h6>
+    <h6 class="h6">H6 Three</h6>
+
   </body>
 </html>
