@@ -122,3 +122,45 @@ Feature: Multi Elements
      And the text for the first item in ordered list 1 should be "Number One"
      And the text for the first item in ordered list 2 should be "Number Two"
      And the text for the first item in ordered list 3 should be "Number Three"
+
+   Scenario: Selecting h1s
+     When I select the h1s with class "h1"
+     Then I should have 3 h1s
+     And the text for h1 1 should be "H1 One"
+     And the text for h1 2 should be "H1 Two"
+     And the text for h1 3 should be "H1 Three"
+
+   Scenario: Selecting h2s
+     When I select the h2s with class "h2"
+     Then I should have 3 h2s
+     And the text for h2 1 should be "H2 One"
+     And the text for h2 2 should be "H2 Two"
+     And the text for h2 3 should be "H2 Three"
+
+   Scenario: Selecting h3s
+     When I select the h3s with class "h3"
+     Then I should have 3 h3s
+     And the text for h3 1 should be "H3 One"
+     And the text for h3 2 should be "H3 Two"
+     And the text for h3 3 should be "H3 Three"
+
+   Scenario: Selecting h4s
+     When I select the h4s with class "h4"
+     Then I should have 3 h4s
+     And the text for h4 1 should be "H4 One"
+     And the text for h4 2 should be "H4 Two"
+     And the text for h4 3 should be "H4 Three"
+
+   Scenario: Selecting h5s
+     When I select the h5s with class "h5"
+     Then I should have 3 h5s
+     And the text for h5 1 should be "H5 One"
+     And the text for h5 2 should be "H5 Two"
+     And the text for h5 3 should be "H5 Three"
+
+   Scenario: Selecting h6s
+     When I select the h6s with class "h6"
+     Then I should have 3 h6s
+     And the text for h6 1 should be "H6 One"
+     And the text for h6 2 should be "H6 Two"
+     And the text for h6 3 should be "H6 Three"
